# skillctl

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  SPEC.md  TESTPLAN.md  changelog.md  justfile
.cargo/: mutants.toml
.github/workflows/: ci.yml  mutation.yml  release.yml
docs/superpowers/plans/: 2026-03-27-review-findings-fix-plan.md
scripts/: mutation.sh
src/: cli.rs  config.rs  core_e2e_tests.rs  diff.rs  digest.rs  doctor.rs  error.rs  i18n.rs  integration_tests.rs  lib.rs  main.rs  skill.rs  status.rs  sync.rs
tests/: cli_e2e.rs
tests/snapshots/: cli_e2e__doctor_all_snapshot.snap  cli_e2e__doctor_global_snapshot.snap  cli_e2e__push_dry_run_snapshot.snap  cli_e2e__status_all_outputs_table_snapshot.snap  cli_e2e__status_outputs_table_snapshot.snap
