[package]
name = "skillctl"
version = "0.1.2"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.3"
clap = { version = "4.5.54", features = ["derive"] }
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
shellexpand = "3.1.1"
tabwriter = "1.4.1"
tempfile = "3.24.0"
thiserror = "2.0.17"
toml = "0.9.11"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
insta = "1.39.0"
predicates = "3.1.0"
